# try-idris

./: .gitignore  LICENSE  README.md  datastore.idr  datatypes.idr  functions.idr  hello.idr  prims.idr  reverse.idr  try-idris.cabal
