name:                try-idris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aztecrex/try-idris#readme
license:             BSD3
license-file:        LICENSE
author:              Greg Wiley
maintainer:          aztec.rex@jammm.com
copyright:           2017 Greg Wiley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable try-idris-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , try-idris
  default-language:    Haskell2010

test-suite try-idris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , try-idris
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aztecrex/try-idris
